--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><title>https://zwaag.io/</title><link rel=canonical href=https://zwaag.io/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://zwaag.io/"></head></html>
+<!doctype html><html><head><title>https://koviax.github.io/</title><link rel=canonical href=https://koviax.github.io/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://koviax.github.io/"></head></html>
